--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://Jaiah5.github.io/jaiah-react-portfolio-final",
-  "name": "jaiah-react-portfolio-final",
+  "homepage": "https://jaiah5.github.io/portfolio2025",
+  "name": "portfolio2025",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
